Fixed overflowing section on mobile

--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -49,7 +49,7 @@
   align-items: center;
 }
 
-.profile-pic-wrapper-mobile {
+.profile-pic-mobile {
   display: none;
 }
 
@@ -60,19 +60,30 @@
 }
 
 @media screen and (max-width: 800px){
+  /* * {margin: 0; padding: 0;} */
   .profile-pic-wrapper {
     display: none;
   }
 
-  .profile-pic-wrapper-mobile {
+  /* .profile-pic-wrapper-mobile {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    /* padding-left: 50px;
+    padding-right: 50px; 
+  }*/
+
+  .profile-pic-mobile {
+    display: block;
+    width: 100%;
+    object-fit: contain;
   }
 
   .about {
     flex-direction: column;
     align-items: center;
+    /* margin-left: 50px;
+    margin-right: 50px; */
   }
 
   .resume-button {
